# MergenVisionPhase2

./: .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_NOTICES.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  cli.py
backend/app/api/: __init__.py
backend/app/api/routers/: __init__.py
backend/app/application/services/: __init__.py  reconcile_video_identities.py  run_video_detection.py  select_best_shots.py
backend/app/domain/: __init__.py  native_job.py  video_tracking.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/native_worker/: __init__.py  client.py  subprocess_adapter.py
backend/app/ports/: __init__.py  native_worker.py
backend/native/: CMakeLists.txt
backend/native/build2/: CMakeCache.txt
backend/native/build_docker/: CMakeCache.txt  Makefile  cmake_install.cmake  deepstream_face_worker  render_annotated_video  second_pass_render  sprint04_feasibility_probe  test_gallery  test_glintr100_engine  test_l2_normalize  test_nms  test_warp_align_rgba_pitch
backend/native/build_docker/plugins/gst-mvfacerecognizer/: Makefile  cmake_install.cmake
backend/native/build_docker/plugins/gst-mvfacetracker/: Makefile  cmake_install.cmake
backend/native/build_docker/plugins/gst-nvdsretinaface/: Makefile  cmake_install.cmake
backend/native/build_docker/tracking/: Makefile  cmake_install.cmake  test_evidence_writer  test_tracking_core  test_tracking_core_asan
backend/native/configs/: glintr100_preprocess_contract.json  retinaface_pgie_config.txt  retinaface_preprocess.txt  tracker_NvDCF_mergen.yml  tracker_config.txt
backend/native/kernels/: mergenvision_kernels.h  warp_align_rgba_pitch.cu
backend/native/parsers/: retinaface_parser.cpp
backend/native/plugins/gst-mvfacerecognizer/: CMakeLists.txt  gstmvfacerecognizer.cpp  gstmvfacerecognizer.cpp.bak  mv_face_recognition_meta.cpp  mv_face_recognition_meta.h
backend/native/plugins/gst-mvfacetracker/: CMakeLists.txt  gstmvfacetracker.cpp  gstmvfacetracker.h  tracklet_meta.cpp  tracklet_meta.h
backend/native/plugins/gst-nvdsretinaface/: CMakeLists.txt  gstnvdsretinaface.cpp
backend/native/recognition/: gallery.cpp  gallery.h  glintr100_engine.cpp
backend/native/tests/: test_gallery.cpp  test_glintr100_engine.cpp  test_l2_normalize.cu  test_nms.cu  test_warp_align_rgba_pitch.cu
backend/native/tools/: dump_engine_meta.cpp  render_annotated_video.cpp  second_pass_render.cpp  sprint04_feasibility_probe.cpp
backend/native/tracking/: CMakeLists.txt  byte_tracker.cpp  byte_tracker.h  continuous_iou.cpp  continuous_iou.h  evidence_writer.cpp  evidence_writer.h  kalman_filter.cpp  kalman_filter.h  linear_assignment.cpp  linear_assignment.h  multi_source_tracker.cpp  multi_source_tracker.h  tracker_types.h
backend/native/tracking/tests/: test_evidence_writer.cpp  test_tracking_core.cpp
backend/native/worker/: main.cpp  retinaface_postproc.cpp  retinaface_postproc.h
backend/scripts/: artifacts_check.py  diagnostic_low_threshold_parity.py  diagnostic_native_tensor_parity.py  diagnostic_preprocess_parity.py  docker_watchdog.py  native_linkcheck.py  run_worker.sh
backend/tests/fixtures/cpu_oracle/: README.md  cpu_oracle_retinaface.py
backend/tests/integration/: test_batch1_baseline.py  test_batch_invariants.py  test_layout.py  test_stale_paths.py
backend/tests/native/: detector_parity_lib.py  test_batch_benchmark.py  test_batch_detection_parity.py  test_batch_determinism.py  test_cli_tracker_batch_reject.py  test_detector_determinism.py  test_detector_engine_parity.py  test_detector_frame_identity.py  test_detector_parity.py  test_detector_pipeline_parity.py  test_gpu_hot_path_contract.py  test_mvfacerecognizer_plugin.py  test_native_worker_client.py  test_render_parity.py  test_worker_recognition_metadata.py
backend/tests/unit/: test_benchmark_matrix_summary.py  test_docker_watchdog.py  test_domain_native_job.py  test_glintr100_contract.py  test_native_worker_client.py  test_run_video_detection_service.py  test_subprocess_adapter.py
backend/tests/unit/tracking/: test_reconcile_video_identities.py
backend/tools/: annotate_video_with_gallery.py  benchmark_correctness_matrix.py  benchmark_tracker_off_matrix.py  benchmark_worker.py  compare_tracker_batch_correctness.py  compare_yolo_retinaface_phoebe.py  draw_phoebe_annotations.py  generate_gallery_embeddings.py  sprint04_pool_ab.py  sprint04_tracker_diagnostic.py  sweep_mux_pool.py  test_engines_and_annotate_phoebe.py  tmp_check_align.py  tmp_check_centroids.py  tmp_probe_recognizer.py  tmp_summary.py
data/annotations/Phoebe/: annotations.yaml
data/gallery/: gallery_centroids.json
data/gallery/Chandler/: annotations.yaml
data/gallery/Joey/: annotations.yaml
data/gallery/Monica/: annotations.yaml
data/gallery/Phoebe/: annotations.yaml
data/gallery/Rachel/: annotations.yaml
docker/: Dockerfile.deepstream  Dockerfile.deepstream-dev  Dockerfile.test  docker-compose.test.yml
docs/implementation/: CURRENT_SPRINT.md  MILESTONE_A_PLAN.md  REFERENCE_DECISION_LOG.md  RUNTIME_INVENTORY.md  nvdsinfer.h.ds9
docs/model_artifacts/: MANIFEST.yaml
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/docs/: BACKEND_CONTRACT_GAPS.md
frontend/src/: App.tsx  main.tsx  routes.tsx
native/: CMakeLists.txt
native/configs/: retinaface_pgie_config.txt  tracker_IOU_mergen.yml
native/kernels/: mergenvision_kernels.h  nms.cu
native/parsers/: retinaface_parser.cpp
native/tools/: render_annotated_video.cpp
native/worker/: main.cpp
opensourcereferences/: references.md
scripts/: annotate_video_with_gallery.py  compare_yolo_retinaface_phoebe.py  draw_phoebe_annotations.py  generate_gallery_embeddings.py  run_worker.sh  sanity_check_detections.py  test_engines_and_annotate_phoebe.py  tmp_check_align.py  tmp_check_centroids.py  tmp_probe_recognizer.py
tests/native/: test_gpu_hot_path_contract.py
tools/: visualize_detections.py
(+83 files in other folders)
